# je_analyzer

./: .gitignore  INSTALL.md  LICENSE  README.md  je_analyzer.py  main.py  publish.sh  pyproject.toml
dev/: CLAUDE.md  DESIGN.md  TASK.md
src/je_analyzer/: __init__.py  __main__.py  main.py
